ingress/hpa-deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nginxdep-hpapod
  labels:
    type: dep-hpa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxhpa
  strategy:
      type: RollingUpdate 
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  template:
    metadata:
      name: nginxpod 
      labels:
        app: nginxhpa 
    spec:
      containers:
        - name: nginxcont
          image: nginx:latest 
          ports:
            - containerPort: 80
              protocol: TCP 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
