ingress/tomcat-hpa-dep.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: tomcatdep
  labels:
    type: hpa-dep 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat-hpa-dep
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: tomcatpod 
      labels:
        app: tomcat-hpa-dep 
    spec:
      containers:
        - name: tomcatcont
          image: tomcat:latest
          ports:
            - containerPort: 8080
              protocol: TCP 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
