ingress/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxcip
  labels:
    type: cip 
spec:
  selector:
    app: nginxpod 
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
