ingress/tomcat-cip.yml
apiVersion: v1
kind: Service 
metadata:
  name: tomcatcip
  labels:
    type: tccip 
spec:
  selector:
    app: tomcatpod 
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
