ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ing 
  labels:
    type: ingress 
spec:
  ingressClassName: nginx
  rules:
    - host: aee12aee6bac64e0ebe186855782baa9-1935920191.ap-south-1.elb.amazonaws.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cip
                port:
                  number: 80
          - path: /tomcat
            pathType: Prefix 
            backend:
              service:
                name: tccip
                port:
                  number: 8080
